# tap-nikabot

./: .gitignore  .pylintrc  CHANGELOG.md  LICENSE  Makefile  README.md  catalog.json  dotenv.sh  pylintrc  pytest.ini  requirements.txt  sample_config.json  setup.cfg  setup.py  tap-nikabot.sh
.circleci/: config.yml
stubs/: backoff.pyi
stubs/singer/: __init__.pyi  utils.pyi
tap_nikabot/: __init__.py  client.py  errors.py  replication_method.py  typing.py
tap_nikabot/streams/: __init__.py  groups.py  projects.py  records.py  roles.py  stream.py  teams.py  user.py  users.py
tests/: conftest.py  test_discover.py  test_stream.py  test_sync.py  test_sync_groups.py  test_sync_projects.py  test_sync_records.py  test_sync_roles.py  test_sync_teams.py  test_sync_users.py
