[metadata]
description-file = README.md

[pycodestyle]
ignore = E501,E704

[tool:pytest]
addopts = --disable-socket
filterwarnings =
    ignore:.*collections\.abc.* is deprecated:DeprecationWarning

[coverage:run]
source = tap_nikabot
omit = tap_nikabot/typing.py

[coverage:report]
skip_covered = True

[mypy]
mypy_path= stubs

[mypy-singer.*]
ignore_missing_imports = True