[metadata]
description-file = README.md

[pycodestyle]
ignore = E501,E704

[flake8]
ignore = E231,E501,W503

[tool:pytest]
addopts = --disable-socket
filterwarnings =
    ignore:.*collections\.abc.* is deprecated:DeprecationWarning

[coverage:run]
source = tap_nikabot
omit = tap_nikabot/typing.py

[coverage:report]
skip_covered = True
show_missing = True

[mypy]
mypy_path= stubs

[mypy-singer.*]
ignore_missing_imports = True

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=5
use_parentheses=True
line_length=120
combine_as_imports=True
